# aoc-2023

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build
doc/: day01.md  day02.md
include/: common.hpp  day01.hpp  day02.hpp
src/: common.cpp  day01-array-over-map.cpp  day01-no-split.cpp  day01.cpp
src/day01/: better-letters-check.cpp  main.cpp  naive.cpp  no-string-conversion.cpp  remove-digits-list.cpp
src/day02/: main.cpp  naive.cpp
test/: day01.cpp  day02.cpp
